@@ -34,6 +34,28 @@
 
             Assert.IsNull(environment.GetValue("foo"));
         }
+
+        [TestMethod]
+        public void GetValueDefinedInParent()
+        {
+            BindingEnvironment parent = new BindingEnvironment();
+            parent.SetValue("foo", "bar");
+            BindingEnvironment environment = new BindingEnvironment(parent);
+
+            Assert.AreEqual("bar", environment.GetValue("foo"));
+        }
+
+        [TestMethod]
+        public void SetValueDefinedInParent()
+        {
+            BindingEnvironment parent = new BindingEnvironment();
+            parent.SetValue("foo", "bar");
+            BindingEnvironment environment = new BindingEnvironment(parent);
+            environment.SetValue("foo", "newbar");
+
+            Assert.AreEqual("newbar", environment.GetValue("foo"));
+            Assert.AreEqual("newbar", parent.GetValue("foo"));
+        }
     }
 }
 
