@@ -15,3 +15,8 @@ Predicates.IsFalse, .IsTrue w/tests
 IfCommand
 BinaryExpression, ArithmeticBinaryExpression
 UnaryExpression, ArithmeticUnaryExpression
+
+2009-08-20
+WhileCommand
+ForEachCommand
+BindingEnvironment with parent
